# ripperdoc

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_v0.4.0.md  QUICKSTART.md  README.md  README_CN.md  install.cmd  install.ps1  install.sh  pyproject.toml  python.grammar.md  ripperdoc.spec  ripperdoc_onefile.spec  setup.py  test_git_integration.py
.github/workflows/: release.yml  test.yml
assets/: model_prices_and_context_window.json
docs/: SDK_USAGE.md  SDK_USAGE_CN.md  hooks.md  team-teammate-mechanism.md
examples/: config_examples.py  tool_examples.py
examples/hooks/: README.md  check_bash.py  check_edit.py  check_prompt.py  check_write.py  demo.py  integration_example.py  log_bash.py  (+4 more)
ripperdoc/: __init__.py  __main__.py
scripts/: build.py  build_nuitka.py  generate_model_prices_module.py  llm_debug_proxy.py  nuitka_build.sh
tests/: __init__.py  conftest.py  test_agents.py  test_agents_subcommand_cli.py  test_anthropic_provider_refactor.py  test_ask_user_question_tool.py  test_background_notifications.py  test_background_shell_shutdown.py  test_background_shell_status.py  test_choice_ui.py  test_claude_sdk_compatibility.py  test_cli_commands.py  test_cli_sdk_options.py  test_cli_stdin.py  test_compact.py  test_config.py  test_config_paths.py  test_context_length_errors.py  test_context_limits.py  test_copy_command.py  test_custom_commands.py  test_diff_rendering.py  test_export_command.py  test_file_edit_tool.py  test_file_mention_completer.py  test_gemini_provider_refactor.py  test_git_utils.py  test_grep_tool_parsing.py  test_hooks.py  test_hooks_cmd.py  test_import_graph_cycles.py  test_interrupt_handler.py  test_managed_settings.py  test_mcp_config.py  test_mcp_subcommand_cli.py  test_mcp_tui.py  test_memory_auto.py  test_memory_tool.py  test_message_display.py  test_messages.py  (+79 more)
(+326 files in other folders)
